# F1-Airflow-test-simulation

./: README.md  view_mesh.cpp  view_mesh.py
Aerodinamic/: CMakeLists.txt  view_mesh.cpp  view_mesh.py
